--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>GSAP</title>
+</head>
+<body>
+    <header>
+        <h1 id="main-heading">Welcome to ChatZone</h1>
+        <p id="sub-heading">Connect, Chat, and Share!</p>
+    </header>
 
+    <!-- Chat Animation Section -->
+    <div id="chat-animation">
+        <div class="chat-bubble left">👋 Hi there!</div>
+        <div class="chat-bubble right">Hello! 😊</div>
+    </div>
+
+    <!-- Call-to-Action Button -->
+   
+      <button id="cta-button">Start Chatting Now!</button>
+
+      </div>
+
+<!-- GSAP Library -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
+</body>
+</html>
