--- a/index.html
+++ b/index.html
@@ -26,5 +26,6 @@
 
 <!-- GSAP Library -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
+    <script src="javascript.js"></script>
 </body>
 </html>
