--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GSAP</title>
+    <title>ChatZone</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -23,9 +23,9 @@
       <button id="cta-button">Start Chatting Now!</button>
 
       </div>
-
-<!-- GSAP Library -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/gsap.min.js"></script>
-    <script src="script.js"></script>
+      
+      <!-- GSAP Library -->
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/gsap.min.js"></script>
+      <script src="script.js"></script>
 </body>
 </html>
