--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <div id="chat-animation">
         <div class="chat-bubble left">👋 Hi there!</div>
         <div class="chat-bubble right">Hello! 😊</div>
-        <div class="chat-bubble leftA">how are you?</div>
-        <div class="chat-bubble rightA">I'm good! How about you?</div>
-        <div class="chat-bubble leftB">I'm good too!</div>
-        <div class="chat-bubble rightB">Any new updates?</div>
+        <div class="chat-bubble left">how are you?</div>
+        <div class="chat-bubble right">I'm good! How about you?</div>
+        <div class="chat-bubble left">I'm good too!</div>
+        <div class="chat-bubble right">Any new updates?</div>
     </div>
 
     <!-- Call-to-Action Button -->
