--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 
     <!-- Chat Animation Section -->
     <div id="chat-animation">
-        <div class="chat-bubble left">👋 Hi there!</div>
-        <div class="chat-bubble right">Hello! 😊</div>
-        <div class="chat-bubble left">how are you?</div>
-        <div class="chat-bubble right">I'm good! How about you?</div>
-        <div class="chat-bubble left">I'm good too!</div>
-        <div class="chat-bubble right">Any new updates?</div>
+        <div class="chat-bubble leftA">👋 Hi there!</div>
+        <div class="chat-bubble rightB">Hello! 😊</div>
+        <div class="chat-bubble leftA">how are you?</div>
+        <div class="chat-bubble rightB">I'm good! How about you?</div>
+        <div class="chat-bubble leftA">I'm good too!</div>
+        <div class="chat-bubble rightB">Any new updates?</div>
     </div>
 
     <!-- Call-to-Action Button -->
