--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     </div>
 
     <!-- Call-to-Action Button -->
-   
+     <a harf="login.html">
       <button id="cta-button">Start Chatting Now!</button>
-
+     </a>
       </div>
       
       <!-- GSAP Library -->
