--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
 
     <!-- Call-to-Action Button -->
-     <a harf="login.html">
+     <a href="login.html">
       <button id="cta-button">Start Chatting Now!</button>
      </a>
       </div>
