--- a/login.html
+++ b/login.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="login.css">
 </head>
 <body>
+    <div>
     <div class="login-container">
         <h2>Login</h2>
         <!-- Message ko form ke andar sabse upar rakha hai -->
@@ -22,6 +23,7 @@
             </div>
             <button type="submit">Login</button>
         </form>
+    </div>
     </div>
     <script src="script.js"></script>
 </body>
