--- a/login.html
+++ b/login.html
@@ -4,27 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>
     <div class="login-container">
         <h2>Login</h2>
-        <!-- Message ko form ke andar sabse upar rakha hai -->
-        <p id="message"></p>
-        <form id="loginForm">
+        <form>
             <div class="input-group">
                 <label for="username">Username</label>
-                <input type="text" id="username" name="username" required>
+                <input type="text" id="username" placeholder="Enter your username" required>
             </div>
             <div class="input-group">
                 <label for="password">Password</label>
-                <input type="password" id="password" name="password" required>
+                <input type="password" id="password" placeholder="Enter your password" required>
             </div>
-            <button type="submit">Login</button>
+            <button type="submit" class="login-btn">Login</button>
+            <p class="register-link">Don't have an account? <a href="#">Sign Up</a></p>
         </form>
     </div>
-    </div>
-    <script src="script.js"></script>
 </body>
 </html>
